--- a/PFMS/templates/main.html
+++ b/PFMS/templates/main.html
@@ -7,36 +7,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Finance Management</title>
+    <link rel="stylesheet" type="text/css" href="{% static '/css/style.css'%}">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/style.css'%}"
+    
+    <link href="https://use.fontawesome.com/releases/v5.0.11/css/all.css" rel="stylesheet">
   </head>
 
     <body>
-        <div class="container-fluid">
-        <div class="row flex-nowrap">
-            {% include 'navbar.html' %}
-            <div class="col py-3 container">
-                <nav class="navbar bg-light mb-5">
-                    <div class="container-fluid">
-                        <a class="navbar-brand bi-grid" href="#">
-                            {% block header %}
-                                Personal Finance Mangement System
-                            {% endblock %}
-                        </a>
-                    </div>
-                </nav>
-                {% block body %}
-                {% endblock %}
-            </div>
-        </div>
-    </div>
-    <script src="{% static 'admin/js/core.js' %}"></script>
+        {% include 'navbar.html' %}
+        {% block body %}
+
+        {% endblock %}
+
+
+
+
+
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 
-    <!-- <script src="{% static '/js/script.js'%}"></script> -->
+    <script src="{% static '/js/script.js'%}"></script>
     </body>
 </html>
+
+
+
