--- a/PFMS/templates/main.html
+++ b/PFMS/templates/main.html
@@ -16,11 +16,14 @@
     <link href="https://use.fontawesome.com/releases/v5.0.11/css/all.css" rel="stylesheet">
   </head>
 
-    <body>
+    <body class="p-3 mb-2 bg-dark text-white">
         {% include 'navbar.html' %}
-        {% block body %}
+        
+        <div class="pt-3">
+          {% block body %}
 
-        {% endblock %}
+          {% endblock %}
+        </div>
 
 
 
