url issue fixed

--- a/PFMS/templates/navbar.html
+++ b/PFMS/templates/navbar.html
@@ -56,6 +56,13 @@
               <li><a class="dropdown-item" href="{% url 'expanse-record-list' %}">Expanse Records</a></li>
             </ul>
           </li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          <li>
+            <a href="{% url 'logout' %}" class="btn btn-danger active" role="button">Logout</a>
+          </li>
+          
         </ul>
       </div>
     </div>
