--- a/PFMS/accounts/templates/accounts/accounts_list.html
+++ b/PFMS/accounts/templates/accounts/accounts_list.html
@@ -3,28 +3,27 @@
 
 
 
-
 {% block body %}
 <div class="container">
   <table class="table table-dark table-striped">
     <thead>
       <tr>
-        <th scope="col">#</th>
         <th scope="col">Account Name</th>
         <th scope="col">Account No</th>
         <th scope="col">Custodial Name</th>
         <th scope="col">Account Balance</th>
+        <th scope="col">Edit</th>
         
       </tr>  
     </thead>
     <tbody>
       {% for account in object_list %}  
       <tr>
-        <th scope="row">{{account.id}}</th>
-        <td>{{account.account_name}}</td>
+        <th scope="row">{{account.account_name}}</th>
         <td>{{account.account_no}}</td>
         <td>{{account.custodial_name}}</td>
         <td>{{account.account_balance}}</td>
+        <td><a href="{% url 'update-account' account.id %}" class="btn btn-danger active" role="button"><i class="bi bi-pencil-square"></i></a></td>
       </tr>
       {% empty %}
         <h3>No Accounts Added</h3>
