--- a/PFMS/templates/sidebar.html
+++ b/PFMS/templates/sidebar.html
@@ -5,7 +5,7 @@
     <nav class="navbar-dark">
       <ul class="navbar-nav">
         <li>
-          <div class="text-muted small fw-bold text-uppercase px-3">
+          <div class="text-muted small fw-bold text-uppercase px-3 pt-2">
             Dashboard
           </div>
         </li>
@@ -15,11 +15,11 @@
             <span>Dashboard</span>
           </a>
         </li>
-        <li class="my-4">
+        <li class="my-2">
           <hr class="dropdown-divider bg-light" />
         </li>
         <li>
-          <div class="text-muted small fw-bold text-uppercase px-3 mb-3">
+          <div class="text-muted small fw-bold text-uppercase px-3 mb-1">
             Accounts
           </div>
         </li>
@@ -66,11 +66,11 @@
             <span>Transaction History</span>
           </a>
         </li>
-        <li class="my-4">
+        <li class="my-2">
           <hr class="dropdown-divider bg-light" />
         </li>
         <li>
-          <div class="text-muted small fw-bold text-uppercase px-3 mb-3">
+          <div class="text-muted small fw-bold text-uppercase px-3 mb-1">
             Income
           </div>
         </li>
@@ -111,18 +111,18 @@
             <span>Income History</span>
           </a>
         </li>
-        <li class="my-4">
+        <li class="my-2">
           <hr class="dropdown-divider bg-light" />
         </li>
         <li>
-          <div class="text-muted small fw-bold text-uppercase px-3 mb-3">
-            Expanse
+          <div class="text-muted small fw-bold text-uppercase px-3 mb-1">
+            Expense
           </div>
         </li>
         <li>
           <a class="nav-link px-3 sidebar-link" data-bs-toggle="collapse" href="#Expanse">
             <span class="me-2"><i class="bi bi-layout-split"></i></span>
-            <span>Expanse</span>
+            <span>Expense</span>
             <span class="ms-auto">
               <span class="right-icon">
                 <i class="bi bi-chevron-down"></i>
@@ -134,7 +134,7 @@
               <li>
                 <a href="{% url 'add-expanse-record' %}" class="nav-link px-3">
                   <span class="me-2"><i class="bi bi-speedometer2"></i></span>
-                  <span>Add  Expanse Record</span>
+                  <span>Add Expense Record</span>
                 </a>
               </li>
             </ul>
@@ -144,7 +144,7 @@
               <li>
                 <a href="{% url 'expanse-category-list' %}" class="nav-link px-3">
                   <span class="me-2"><i class="bi bi-speedometer2"></i></span>
-                  <span>Expanse Category</span>
+                  <span>Expense Category</span>
                 </a>
               </li>
             </ul>
@@ -153,7 +153,7 @@
         <li>
           <a href="{% url 'expanse-record-list' %}" class="nav-link px-3">
             <span class="me-2"><i class="bi bi-book-fill"></i></span>
-            <span>Expanse History</span>
+            <span>Expense History</span>
           </a>
         </li>
         <li>
