--- a/PFMS/templates/account/password_reset_from_key.html
+++ b/PFMS/templates/account/password_reset_from_key.html
@@ -1,19 +1,46 @@
-{% extends "account/base.html" %}
 
+{% extends "base.html" %}
+{% load static %}
 {% load i18n %}
+{% load crispy_forms_tags %}
+
+{% block extra_head %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/all_auth.css'%}">
+{% endblock %}
+
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
-
+{% include 'navbar.html' %}
+{% include 'messages.html' %}
+    <div class="container">
+        <div class="row">
+        <div class="col-lg-10 col-xl-9 mx-auto">
+            <div class="card flex-row my-5 border-0 shadow rounded-3 overflow-hidden">
+            <div class="card-img-left d-none d-md-flex row ms-5 w-50">
+                
+            </div>
+            <div class="card-body p-4 p-sm-5">
+                <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
         <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
     {% else %}
-        <form method="POST" action="{{ action_url }}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
-        </form>
+                <form method="POST" action="{{ action_url }}" class="password_reset">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+            
+                    <div class="d-grid mb-2">
+                        <input type="submit" value="{% trans 'change password' %}"  class="btn btn-lg btn-primary btn-login fw-bold text-uppercase" />
+                    </div>
+                </form>
+                <p>{% blocktrans %}Please contact "shahriarhossain.3825@gmail.com"
+                    if you have any trouble resetting your password.{% endblocktrans %}</p>
+            </div>
     {% endif %}
+            </div>
+        </div>
+        </div>
+    </div>
+
 {% endblock %}
