--- a/PFMS/static/css/all_auth.css
+++ b/PFMS/static/css/all_auth.css
@@ -1,13 +1,14 @@
 body {
-background: #007bff;
-background: linear-gradient(to right, #0062E6, #33AEFF);
+background: #50bfbf;
+background: linear-gradient(to right, #50bfbf, #86bf48);
 }
 
 .card-img-left {
 width: 45%;
 /* Link to your background image using in the property below! */
-background: scroll center url('https://source.unsplash.com/WEQbe2jBg40/414x512');
+background: scroll center;
 background-size: cover;
+overflow: hidden;
 }
 
 .btn-login {
