--- a/PFMS/templates/account/email_confirm.html
+++ b/PFMS/templates/account/email_confirm.html
@@ -1,31 +1,48 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
+{% load static %}
 {% load i18n %}
+{% load crispy_forms_tags %}
+{% block extra_head %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/all_auth.css'%}">
+{% endblock %}
 {% load account %}
-
-{% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
 
 {% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+{% include 'navbar.html' %}
+{% include 'messages.html' %}
+<div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-xl-9 mx-auto">
+        <div class="card flex-row my-5 border-0 shadow rounded-3 overflow-hidden">
+          <div class="card-body p-4 p-sm-5">
+            <h5 class="card-title text-center mb-5 fw-light fs-5">{% trans "Confirm E-mail Address" %}</h5>
+            {% if confirmation %}
+            {% user_display confirmation.email_address.user as user_display %}
 
-{% if confirmation %}
+            <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
 
-{% user_display confirmation.email_address.user as user_display %}
 
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+            <form class="card-body cardbody-color p-lg-5" method="post" action="{% url 'account_confirm_email' confirmation.key %}" >
+              {% csrf_token %}
+              {{ form | crispy }}
+              <div class="d-grid mb-2">
+                <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase" type="submit">{% trans 'Confirm' %}</button>
+              </div>
+            </form>
+            {% else %}
+            {% url 'account_email' as email_url %}
 
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
-</form>
+            <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
 
-{% else %}
+            {% endif %}
 
-{% url 'account_email' as email_url %}
-
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
-
-{% endif %}
+  
+            <hr class="my-4">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
