--- a/PFMS/templates/account/password_reset_from_key_done.html
+++ b/PFMS/templates/account/password_reset_from_key_done.html
@@ -1,9 +1,24 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
+{% load static %}
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block extra_head %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/all_auth.css'%}">
+{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+{% include 'navbar.html' %}
+{% include 'messages.html' %}
+    <div class="container">
+        <div class="row">
+        <div class="col-lg-10 col-xl-9 mx-auto">
+            <div class="card flex-row my-5 border-0 shadow rounded-3 overflow-hidden">
+            <div class="card-body p-4 p-sm-5">
+                <h1>{% trans "Change Password" %}</h1>
     <p>{% trans 'Your password is now changed.' %}</p>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
 {% endblock %}
