--- a/PFMS/templates/account/signup.html
+++ b/PFMS/templates/account/signup.html
@@ -3,43 +3,46 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-
-{% block css %}
+{% block extra_head %}
 <link rel="stylesheet" type="text/css" href="{% static '/css/all_auth.css'%}">
 {% endblock %}
 
+
 {% block content %}
+{% include 'navbar.html' %}
+{% include 'messages.html' %}
 <div class="container">
   <div class="row">
     <div class="col-lg-10 col-xl-9 mx-auto">
       <div class="card flex-row my-5 border-0 shadow rounded-3 overflow-hidden">
         <div class="card-img-left d-none d-md-flex">
-          <!-- Background image for card set in CSS! -->
+          <img class="img-fluid" src="{% static '/img/authentication/1.jpg'%}" alt="">
         </div>
         <div class="card-body p-4 p-sm-5">
           <h5 class="card-title text-center mb-5 fw-light fs-5">Register</h5>
-          <form>
+          <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
             {% csrf_token %}
-            {% crispy form %}
+            {{ form | crispy }}
             {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
 
             <div class="d-grid mb-2">
-              <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase" type="submit">Register</button>
+              <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase" type="submit">{% trans "Sign Up" %}</button>
             </div>
 
-            <a class="d-block text-center mt-2 small" href="{{ login_url }}">Have an account? Sign In</a>
-
-            <hr class="my-4">
-
-            <div class="d-grid mb-2">
-              <button class="btn btn-lg btn-google btn-login fw-bold text-uppercase" type="submit">
-                <i class="fab fa-google me-2"></i> Sign up with Google
-              </button>
-            </div>
 
           </form>
+          
+          <a class="d-block text-center mt-2 small" href="{{ login_url }}">Have an account? Sign In</a>
+
+          <hr class="my-4">
+
+          <div class="d-grid mb-2">
+            <button class="btn btn-lg btn-google btn-login fw-bold text-uppercase" type="submit">
+              <i class="fab fa-google me-2"></i> Sign up with Google
+            </button>
+          </div>
         </div>
       </div>
     </div>
