--- a/PFMS/templates/account/verification_sent.html
+++ b/PFMS/templates/account/verification_sent.html
@@ -1,12 +1,27 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
+{% load static %}
 {% load i18n %}
-
-{% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block extra_head %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/all_auth.css'%}">
+{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
+{% include 'navbar.html' %}
+{% include 'messages.html' %}
+<div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-xl-9 mx-auto">
+        <div class="card flex-row my-5 border-0 shadow rounded-3 overflow-hidden">
+          <div class="card-body p-4 p-sm-5">
+            <h1>{% trans "Verify Your E-mail Address" %}</h1>
 
     <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification e-mail in your main inbox, check your spam folder. Please contact us if you do not receive the verification e-mail within a few minutes.{% endblocktrans %}</p>
+  
+            <hr class="my-4">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
