--- a/PFMS/templates/base.html
+++ b/PFMS/templates/base.html
@@ -9,26 +9,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" />
-  <link rel="stylesheet" type="text/css" href="{% static '/css/style.css'%}">
+
   <title>PFMS | Personal Finance Management System</title>
   <link rel="icon" type="image/x-icon" href="{% static '/img/fav-icon.svg'%}">
-    {% block css %}
-    {% endblock %}
+  {% block extra_head %}
+  {% endblock %}
 </head>
 
 <body >
       {% block body %}
 
-      {% if messages %}
-      <div>
-        <strong>Messages:</strong>
-        <ul>
-          {% for message in messages %}
-          <li>{{message}}</li>
-          {% endfor %}
-        </ul>
-      </div>
-      {% endif %}
+
     
     {% block content %}
     
@@ -36,15 +27,15 @@
     {% endblock %}
     {% block extra_body %}
     {% endblock %}
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="{% static '/js/script.js'%}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script>
-    {% block script %}
-     
-    {% endblock %}
-  </script>
+      {% block script %} {% endblock %}
+    <script>
 </body>
 
 </html>
