--- a/PFMS/templates/main.html
+++ b/PFMS/templates/main.html
@@ -1,22 +1,12 @@
+{% extends "base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" />
-  <link rel="stylesheet" type="text/css" href="{% static '/css/style.css'%}">
-  <title>PFMS | Personal Finance Management System</title>
-  <link rel="icon" type="image/x-icon" href="{% static '/img/fav-icon.svg'%}">
-  {% block css %}
-  {% endblock %}
-</head>
+{% block extra_head %}
+<link  id="mystylesheet" rel="stylesheet" type="text/css" href="{% static '/css/style.css'%}">
+{% endblock %}
 
-<body class="bg-dark">
+
+{% block content %}
   <!-- top navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top border-bottom border-white border-3">
     <div class="container-fluid">
@@ -31,30 +21,114 @@
   <!-- top navigation bar -->
   <!-- offcanvas -->
   {% include 'sidebar.html' %}
+  {% csrf_token %}
   <!-- offcanvas -->
   <main class="mt-5 pt-5">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          {% block body %}
+          {% include 'messages.html' %}
+
+          {% block main %}
 
           {% endblock %}
         </div>
       </div>
     </div>
   </main>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="{% static '/js/script.js'%}"></script>
 
-  <script>
+  <script type="text/javascript">
 
     {% block script %} {% endblock %}
 
   </script>
-</body>
 
-</html>
+  <script  type="text/javascript">
+    function boxDisable(t) {
+    if (t.is(':checked')) {
+      swapStyles('style.css');
+    } else {
+      swapStyles('dark_style.css');
+    }
+    }
+  </script>
+
+  <script type="text/javascript">
+
+    function getCookie(name) {
+      var cookieValue = null;
+      if (document.cookie && document.cookie !== '') {
+        var cookies = document.cookie.split(';');
+        for (var i = 0; i < cookies.length; i++) {
+          var cookie = cookies[i].trim();
+          // Does this cookie string begin with the name we want?
+          if (cookie.substring(0, name.length + 1) === (name + '=')) {
+            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+            break;
+          }
+        }
+      }
+      return cookieValue;
+    }
+    var csrftoken = getCookie('csrftoken');
+
+
+
+    var cssFile = "{% static 'css' %}"
+
+
+    function swapStyles(sheet) {
+      document.getElementById('mystylesheet').href = cssFile + '/' + sheet
+      localStorage.setItem('theme', sheet)
+
+      updateTheme(sheet)
+    }
+
+
+    function loadSettings() {
+      //Call data and set local storage
+
+      var url = "{% url 'user_settings' %}"
+      fetch(url, {
+        method: 'GET',
+        headers: {
+          'Content-type': 'application/json'
+        }
+      })
+        .then((response) => response.json())
+        .then(function (data) {
+
+          console.log('Data:', data)
+
+          var theme = data.theme_value;
+
+          if (theme == 'style.css' || null) {
+            swapStyles('style.css')
+            document.getElementById("theme_button").checked = true;
+          } else if (theme == 'dark_style.css') {
+            swapStyles('dark_style.css')
+            document.getElementById("theme_button").checked = false;
+          }
+
+
+        })
+
+    }
+
+    loadSettings()
+
+
+    function updateTheme(theme) {
+      var url = "{% url 'update_theme' %}"
+      fetch(url, {
+        method: 'POST',
+        headers: {
+          'Content-type': 'application/json',
+          'X-CSRFToken': csrftoken,
+        },
+        body: JSON.stringify({ 'theme': theme })
+      })
+    }
+
+  </script>
+{% endblock %}
