--- a/PFMS/Authentication_and_User_Management/templates/Authentication_and_User_Management/user_profile.html
+++ b/PFMS/Authentication_and_User_Management/templates/Authentication_and_User_Management/user_profile.html
@@ -16,18 +16,20 @@
                                 {{user.get_full_name}}
                             </h5>
                             <h6>
-                                {{user.occupation}}
+                                {{user.profile.occupation}}
                             </h6>
-                            <p class="proile-rating">Date : <span>8/10</span></p>
+                            <p class="proile-rating">Last Login: <span>{{user.last_login}}</span></p>
+                            <p class="proile-rating">You IP Address: <span>{{user_ip}}</span></p>
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
                         </li>
+                        <li class="nav-item ms-2">
+                            <a class="nav-link active" data-toggle="tab" href="{% url 'profile-update-page-url' %}" role="tab" aria-controls="home" aria-selected="true"><i class="bi bi-gear me-2"></i>Edit Profile</a>
+                        </li>
                     </ul>
+
                 </div>
-            </div>
-            <div class="col-md-2">
-                <a class="profile-edit-btn" type="submit" href="{% url 'profile-update-page-url' %}">Edit Profile</a>
             </div>
         </div>
         <div class="row mt-lg-5">
