--- a/PFMS/templates/account/password_change.html
+++ b/PFMS/templates/account/password_change.html
@@ -1,16 +1,34 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
+{% load static %}
 {% load i18n %}
-
+{% load crispy_forms_tags %}
+{% block extra_head %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/all_auth.css'%}">
+{% endblock %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+{% include 'navbar.html' %}
+{% include 'messages.html' %}
+<div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-xl-9 mx-auto">
+        <div class="card flex-row my-5 border-0 shadow rounded-3 overflow-hidden">
+          <div class="card-body p-4 p-sm-5">
+            <h5 class="card-title text-center mb-5 fw-light fs-5">{% trans "Change Password" %}</h5>
+            <form method="POST" action="{% url 'account_change_password' %}" class="password_change card-body cardbody-color p-lg-5">
+                {% csrf_token %}
+                {{ form | crispy }}
+                <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase" type="submit">{% trans "Change Password" %}</button>
+                <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+            </form>
+            <hr class="my-4">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
 {% endblock %}
+
+
