--- a/PFMS/Authentication_and_User_Management/templates/Authentication_and_User_Management/user_profile.html
+++ b/PFMS/Authentication_and_User_Management/templates/Authentication_and_User_Management/user_profile.html
@@ -79,7 +79,7 @@
                             <div class="col-md-6">
                                 <div>
                                     {% url 'account_change_password' as the_url %}
-                                    <a href="{{ the_url }}" class="btn btn-dark border border-white"> Change Password</a>
+                                    <a href="{{ the_url }}" class="btn btn-danger border border-white"> Change Password</a>
                                 </div>
                             </div>
                             
