--- a/PFMS/templates/sidebar2.html
+++ b/PFMS/templates/sidebar2.html
@@ -5,10 +5,23 @@
     <nav class="navbar-dark">
       <ul class="navbar-nav">
         <li>
+          <div class="text-muted small fw-bold text-uppercase px-3 pt-2">
+            Dashboard
+          </div>
+        </li>
+        <li>
           <a href="" class="nav-link px-3 active">
             <span class="me-2"><i class="bi bi-speedometer2"></i></span>
             <span>Dashboard</span>
           </a>
+        </li>
+        <li class="my-2">
+          <hr class="dropdown-divider bg-light" />
+        </li>
+        <li>
+          <div class="text-muted small fw-bold text-uppercase px-3 mb-1">
+            Accounts
+          </div>
         </li>
         <li>
           <a class="nav-link px-3 sidebar-link" data-bs-toggle="collapse" href="#Accounts">
@@ -23,7 +36,7 @@
           <div class="collapse" id="Accounts">
             <ul class="navbar-nav ps-3">
               <li>
-                <a href="" class="nav-link px-3">
+                <a href="{% url 'add_new_account' %}" class="nav-link px-3">
                   <span class="me-2"><i class="bi bi-speedometer2"></i></span>
                   <span>Add New Account</span>
                 </a>
@@ -33,7 +46,7 @@
           <div class="collapse" id="Accounts">
             <ul class="navbar-nav ps-3">
               <li>
-                <a href="" class="nav-link px-3">
+                <a href="{% url 'account_list' %}" class="nav-link px-3">
                   <span class="me-2"><i class="bi bi-speedometer2"></i></span>
                   <span>Accounts List</span>
                 </a>
@@ -42,16 +55,18 @@
           </div>
         </li>
         <li>
-          <a href="" class="nav-link px-3">
+          <a href="{% url 'inter_account_transaction' %}" class="nav-link px-3">
             <span class="me-2"><i class="bi bi-book-fill"></i></span>
             <span>Inter Account Transaction</span>
           </a>
         </li>
+        <li class="my-2">
+          <hr class="dropdown-divider bg-light" />
+        </li>
         <li>
-          <a href="" class="nav-link px-3">
-            <span class="me-2"><i class="bi bi-book-fill"></i></span>
-            <span>Transaction History</span>
-          </a>
+          <div class="text-muted small fw-bold text-uppercase px-3 mb-1">
+            Income
+          </div>
         </li>
         <li>
           <a class="nav-link px-3 sidebar-link" data-bs-toggle="collapse" href="#Income" id="Income-Dropdown">
@@ -66,7 +81,7 @@
           <div class="collapse" id="Income">
             <ul class="navbar-nav ps-3">
               <li>
-                <a href="" class="nav-link px-3" id="Add-Income-Record">
+                <a href="{% url 'add-income-record' %}" class="nav-link px-3" id="Add-Income-Record">
                   <span class="me-2"><i class="bi bi-speedometer2"></i></span>
                   <span>Add Income Record</span>
                 </a>
@@ -76,7 +91,7 @@
           <div class="collapse" id="Income">
             <ul class="navbar-nav ps-3">
               <li>
-                <a href="" class="nav-link px-3">
+                <a href="{% url 'income-category-list' %}" class="nav-link px-3">
                   <span class="me-2"><i class="bi bi-speedometer2"></i></span>
                   <span>Income Category</span>
                 </a>
@@ -85,10 +100,18 @@
           </div>
         </li>
         <li>
-          <a href="" class="nav-link px-3">
+          <a href="{% url 'income-record-list' %}" class="nav-link px-3">
             <span class="me-2"><i class="bi bi-book-fill"></i></span>
             <span>Income History</span>
           </a>
+        </li>
+        <li class="my-2">
+          <hr class="dropdown-divider bg-light" />
+        </li>
+        <li>
+          <div class="text-muted small fw-bold text-uppercase px-3 mb-1">
+            Expense
+          </div>
         </li>
         <li>
           <a class="nav-link px-3 sidebar-link" data-bs-toggle="collapse" href="#Expanse">
@@ -103,7 +126,7 @@
           <div class="collapse" id="Expanse">
             <ul class="navbar-nav ps-3">
               <li>
-                <a href="" class="nav-link px-3">
+                <a href="{% url 'add-expanse-record' %}" class="nav-link px-3">
                   <span class="me-2"><i class="bi bi-speedometer2"></i></span>
                   <span>Add Expense Record</span>
                 </a>
@@ -113,7 +136,7 @@
           <div class="collapse" id="Expanse">
             <ul class="navbar-nav ps-3">
               <li>
-                <a href="" class="nav-link px-3">
+                <a href="{% url 'expanse-category-list' %}" class="nav-link px-3">
                   <span class="me-2"><i class="bi bi-speedometer2"></i></span>
                   <span>Expense Category</span>
                 </a>
@@ -122,10 +145,13 @@
           </div>
         </li>
         <li>
-          <a href="" class="nav-link px-3">
+          <a href="{% url 'expanse-record-list' %}" class="nav-link px-3">
             <span class="me-2"><i class="bi bi-book-fill"></i></span>
             <span>Expense History</span>
           </a>
+        </li>
+        <li>
+          <hr class="my-4">
         </li>
         <div class="fixed-bottom ">
           <li>
