--- a/PFMS/templates/main.html
+++ b/PFMS/templates/main.html
@@ -42,7 +42,7 @@
       </div>
     </div>
   </main>
-
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript">
 
     {% block script %} {% endblock %}
